--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,3 +2,33 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/fonts" as *;
 @use "../../styles/partials/global" as *;
+
+.header {
+  background-color: $primary-dark;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  &__logo {
+    color: $white;
+    font-size: 30px;
+  }
+
+  &__nav {
+    display: flex;
+    align-items: center;
+  }
+
+  &__nav-item {
+    background-color: $primary;
+    color: $black;
+    padding: 10px;
+    margin: 0 5px;
+    border-radius: 10px;
+
+    &:hover {
+      background-color: $grey;
+    }
+  }
+}
