--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -7,5 +7,20 @@
     background-color: $grey;
     padding: 20px;
 
-    
+    &__text {
+        margin: 12px 0;
+    }
+
+    &__start-button {
+        background-color: $primary;
+        margin: 40px 0px;
+        padding: 50px;
+        text-transform: uppercase;
+        font-size: 50px;
+        text-align: center;
+        border-radius: 10px;
+        min-width: 70%;
+
+
+    }
 }
