--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -16,7 +16,24 @@ h1 {
   font-size: 30px;
 }
 
+h3 {
+  margin: 8px 0;
+}
+
 p {
   font-size: 18px;
   line-height: 24px;
+}
+
+.form-input {
+  width: 100%;
+  height: 32px;
+  border-radius: 10px;
+  padding-left: 12px;
+  border: 2px solid $primary-medium;
+  margin-bottom: 12px;
+}
+
+.form-input--error-state {
+  border-color: red;
 }
