--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -26,6 +26,7 @@
     padding: 10px;
     margin: 0 5px;
     border-radius: 10px;
+    border: none;
 
     &:hover {
       background-color: $grey;
