--- a/src/pages/exercise/exercise.scss
+++ b/src/pages/exercise/exercise.scss
@@ -3,22 +3,32 @@
 @use "../../styles/partials/fonts" as *;
 @use "../../styles/partials/global" as *;
 
-
 .exercise {
-    background-color: $grey;
-    padding: 20px;
-
-
+  background-color: $grey;
+  padding: 20px;
 }
 
-.form  {
+.form {
+  &__radial-container {
+    display: flex;
+  }
 
-    &__radial-container {
-        display: flex;
-    }
+  &__radial-item {
+    margin-left: 4px;
+    margin-right: 12px;
+  }
 
-    &__radial-item {
-        margin-left: 4px;
-        margin-right: 12px;
+  &__submit-button {
+    background-color: $primary;
+    color: $black;
+    padding: 10px;
+    margin: 12px 0;
+    border-radius: 10px;
+    border: 1px solid $primary;
+
+    &:hover {
+      background-color: $white;
+      border: 1px solid $primary;
     }
+  }
 }
