cleans up some links

--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -27,10 +27,12 @@ p {
 
 a {
   text-decoration: none;
+  font-weight: bold;
+  color: $primary-medium;
 }
 
 a:visited {
-  color: $black;
+  color: $primary-medium;
 }
 
 .form-input {
