--- a/src/styles/partials/_fonts.scss
+++ b/src/styles/partials/_fonts.scss
@@ -1,18 +1,11 @@
 * {
-  font-family: "Varta", sans-serif;
+  font-family: "Alice", sans-serif;
 }
 
 @font-face {
-  font-family: "Varta";
-  src: url("../../assets/fonts/Varta-Regular.ttf") format("TTF");
+  font-family: "Alice";
+  src: url("../../assets/fonts/Alice-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
-}
-
-@font-face {
-  font-family: "Varta";
-  src: url("../../assets/fonts/Varta-Bold.ttf") format("TTF");
-  font-weight: 700;
-  font-style: bold;
 }
 
