--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -9,26 +9,45 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: column;
 
-  &__logo {
-    height: 60px;
+  @include tablet {
+    flex-direction: row;
   }
 
-  &__nav {
-    display: flex;
-    align-items: center;
+  @include desktop {
+    flex-direction: row;
   }
 
-  &__nav-item {
-    background-color: $primary;
-    color: $black;
-    padding: 10px;
-    margin: 0 5px;
-    border-radius: 10px;
-    border: none;
+&__logo {
+  height: 60px;
+  margin-bottom: 20px;
 
-    &:hover {
-      background-color: $grey;
-    }
+  @include tablet {
+    margin-bottom: 0;
   }
+
+   @include desktop {
+    margin-bottom: 0;
+  }
+}
+
+
+&__nav {
+  display: flex;
+  align-items: center;
+}
+
+&__nav-item {
+  background-color: $primary;
+  color: $black;
+  padding: 10px;
+  margin: 0 5px;
+  border-radius: 10px;
+  border: none;
+
+  &:hover {
+    background-color: $grey;
+  }
+}
 }
