playing with colours

--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -4,7 +4,7 @@
 @use "../../styles/partials/global" as *;
 
 .homepage {
-    background-color: $grey;
+    background-color: $primary-light;
     padding: 20px;
 
     &__text {
