--- a/src/styles/partials/_colors.scss
+++ b/src/styles/partials/_colors.scss
@@ -1,6 +1,6 @@
-$grey: #ececec;
-$primary: #9fd3c7;
-$primary-medium: #385170;
-$primary-dark: #142d4c;
+$primary-light: #cefff1;
+$primary: #ace7ef;
+$primary-medium: #a6acec;
+$primary-dark: #a56cc1;
 $black: black;
 $white: white;
