--- a/src/pages/exercise/exercise.scss
+++ b/src/pages/exercise/exercise.scss
@@ -4,7 +4,7 @@
 @use "../../styles/partials/global" as *;
 
 .exercise {
-  background-color: $grey;
+  background-color: $primary-light;
   padding: 20px;
 }
 
