--- a/src/pages/exercise/exercise.scss
+++ b/src/pages/exercise/exercise.scss
@@ -4,7 +4,6 @@
 @use "../../styles/partials/global" as *;
 
 .exercise {
-  background-color: $primary-light;
   padding: 20px;
 }
 
@@ -21,17 +20,19 @@
   &__submit-button,
   &__next-button,
   &__back-button {
-    background-color: $primary;
-    color: $black;
+    background-color: $primary-dark;
+    color: $white;
     padding: 10px;
     margin: 12px 0;
     margin-right: 12px;
     border-radius: 10px;
-    border: 1px solid $primary;
+    border: 1px solid $primary-dark;
+    transition: 100ms ease-in-out;
 
     &:hover {
       background-color: $white;
       border: 1px solid $primary;
+      color: $black;
     }
   }
 
