--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -12,9 +12,21 @@
   }
 
   &__list-item {
-    border: 1px solid $primary;
+    border: 3px solid $primary;
     margin: 20px;
     padding: 12px;
+    border-radius: 10px;
+    width: 100%;
+    
+  }
+
+  &__date {
+    background-color: $primary;
+    margin: -12px -12px;
+    margin-bottom: 12px;
+    padding: 12px 12px 20px 12px;
+    font-size: 25px;
+
   }
 }
 
