--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -28,11 +28,11 @@ p {
 a {
   text-decoration: none;
   font-weight: 900;
-  color: $primary-medium;
+  color: $primary-dark;
 }
 
 a:visited {
-  color: $primary-medium;
+  color: $primary-dark;
 }
 
 .form-input {
@@ -40,7 +40,7 @@ a:visited {
   height: 32px;
   border-radius: 10px;
   padding-left: 12px;
-  border: 2px solid $primary-medium;
+  border: 2px solid $primary;
   margin-bottom: 12px;
 
   &:focus {
