--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -13,11 +13,10 @@
 
   &__list-item {
     border: 3px solid $primary;
-    margin: 20px;
+    margin: 20px 0;
     padding: 12px;
     border-radius: 10px;
     width: 100%;
-    
   }
 
   &__date {
@@ -26,7 +25,23 @@
     margin-bottom: 12px;
     padding: 12px 12px 20px 12px;
     font-size: 25px;
+  }
 
+  &__delete-button {
+    background-color: $primary-dark;
+    color: $white;
+    padding: 10px;
+    margin: 12px 0;
+    margin-right: 12px;
+    border-radius: 10px;
+    border: 1px solid $primary-dark;
+    transition: 100ms ease-in-out;
+
+    &:hover {
+      background-color: $white;
+      border: 1px solid $primary;
+      color: $black;
+    }
   }
 }
 
