adds delete modal

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -43,6 +43,11 @@
       color: $black;
     }
   }
+
+  &__exercise-count {
+    color: $primary-dark;
+    font-size: 30px;
+  }
 }
 
 .logo:visited {
