--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -4,23 +4,21 @@
 @use "../../styles/partials/global" as *;
 
 .homepage {
-    background-color: $primary-light;
     padding: 20px;
 
-    &__text {
-        margin: 12px 0;
+
+    &__list-item {
+        display: flex;
+        align-items: center;
     }
 
-    &__start-button {
-        background-color: $primary;
-        margin: 40px 0px;
-        padding: 50px;
-        text-transform: uppercase;
-        font-size: 50px;
-        text-align: center;
-        border-radius: 10px;
-        min-width: 70%;
-
-
+    &__icon {
+        width: 50px;
+        margin-right: 12px;
     }
+
+    &__list-text {
+        margin-bottom: 0;
+    }
+   
 }
