--- a/src/pages/exercise/exercise.scss
+++ b/src/pages/exercise/exercise.scss
@@ -12,6 +12,10 @@
 }
 
 .form {
+  border: 3px solid $primary-medium;
+  border-radius: 10px;
+  padding: 12px;
+
   &__radial-container {
     display: flex;
   }
@@ -50,5 +54,3 @@
   height: 20px;
   accent-color: $primary-dark;
 }
-
-
