--- a/src/pages/exercise/exercise.scss
+++ b/src/pages/exercise/exercise.scss
@@ -7,6 +7,13 @@
   padding: 20px;
   min-height: 100vh;
 
+  @include tablet {
+    padding: 40px 40px;
+  }
+  @include desktop {
+    padding: 40px 100px;
+  }
+
   &__intro {
     margin: 20px 0;
   }
@@ -16,6 +23,16 @@
   border: 3px solid $primary-medium;
   border-radius: 10px;
   padding: 12px;
+
+  @include tablet {
+    width: 80%;
+    margin: auto;
+  }
+
+  @include desktop {
+    width: 50%;
+    margin: auto;
+  }
 
   &__radial-container {
     display: flex;
