--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -4,22 +4,45 @@
 @use "../../styles/partials/global" as *;
 
 .homepage {
-    padding: 20px;
-      min-height: 100vh;
+  padding: 20px;
+  min-height: 100vh;
 
+  @include tablet {
+    padding: 40px 40px;
+  }
+  @include desktop {
+    padding: 40px 100px;
+  }
+  
+  &__text {
+    margin: 30px 0;
+  }
+  &__list {
+    margin: 40px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 
-    &__list-item {
-        display: flex;
-        align-items: center;
+    @include tablet {
+      width: 50%;
     }
 
-    &__icon {
-        width: 50px;
-        margin-right: 12px;
+    @include desktop {
+      width: 50%;
     }
+  }
 
-    &__list-text {
-        margin-bottom: 0;
-    }
-   
+  &__list-item {
+    display: flex;
+    align-items: center;
+  }
+
+  &__icon {
+    width: 50px;
+    margin-right: 12px;
+  }
+
+  &__list-text {
+    margin-bottom: 0;
+  }
 }
