--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -7,6 +7,13 @@
   padding: 20px;
   min-height: 100vh;
 
+  @include tablet {
+    padding: 40px 40px;
+  }
+  @include desktop {
+    padding: 40px 100px;
+  }
+
   &__submit {
     background-color: $primary-dark;
     color: $white;
@@ -16,11 +23,22 @@
     border-radius: 10px;
     border: 1px solid $primary-dark;
     transition: 100ms ease-in-out;
+    display: block;
 
     &:hover {
       background-color: $white;
       border: 1px solid $primary;
       color: $black;
+    }
+  }
+
+  &__form {
+    @include tablet {
+      width: 50%;
+    }
+
+    @include desktop {
+      width: 30%;
     }
   }
 }
