--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -7,9 +7,17 @@
   padding: 20px;
   min-height: 100vh;
 
+  @include tablet {
+    padding: 40px 40px;
+  }
+  @include desktop {
+    padding: 40px 100px;
+  }
+
   &__list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
   }
 
   &__list-item {
@@ -18,6 +26,14 @@
     padding: 12px;
     border-radius: 10px;
     width: 100%;
+
+    @include tablet {
+      width: 45%;
+    }
+
+    @include desktop {
+      width: 30%;
+    }
   }
 
   &__date {
@@ -58,14 +74,11 @@
 
   &__subhead {
     display: inline;
-   
-
   }
 
   &__data {
     display: inline;
-     color: $primary-dark;
-   
+    color: $primary-dark;
   }
 }
 
