--- a/src/pages/exercise/exercise.scss
+++ b/src/pages/exercise/exercise.scss
@@ -23,6 +23,8 @@
   border: 3px solid $primary-medium;
   border-radius: 10px;
   padding: 12px;
+       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+
 
   @include tablet {
     width: 80%;
