--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -34,6 +34,7 @@
     padding: 12px;
     border-radius: 10px;
     width: 100%;
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 
     @include tablet {
       width: 45%;
