--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -9,10 +9,13 @@
 
   @include tablet {
     padding: 40px 40px;
+  
   }
   @include desktop {
     padding: 40px 100px;
+    
   }
+
   
   &__text {
     margin: 30px 0;
@@ -44,5 +47,11 @@
 
   &__list-text {
     margin-bottom: 0;
+  }
+
+  &__image {
+    width: 100%;
+    border-radius: 10px;
+    margin-bottom: 20px;
   }
 }
