adds search bar to profile page

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -23,7 +23,7 @@
       gap: 10%;
     }
 
-     @include desktop {
+    @include desktop {
       gap: 5%;
     }
   }
@@ -34,7 +34,7 @@
     padding: 12px;
     border-radius: 10px;
     width: 100%;
-     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 
     @include tablet {
       width: 45%;
@@ -63,6 +63,7 @@
     border: 1px solid $primary-dark;
     transition: 100ms ease-in-out;
     float: right;
+  
 
     &:hover {
       background-color: $white;
@@ -89,8 +90,30 @@
     display: inline;
     color: $primary-dark;
   }
-}
 
-.logo:visited {
-  color: white;
+  &__search {
+    width: 100%;
+    height: 32px;
+    border-radius: 10px;
+    padding-left: 12px;
+    border: 2px solid $primary-medium;
+    margin-bottom: 12px;
+    background-image: url(../../assets/images/search.svg);
+    background-repeat: no-repeat;
+    padding-left: 35px;
+    background-position: 5px 50%;
+    background-size: 20px;
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+
+    @include tablet {
+      width: 45%;
+    }
+
+    @include desktop {
+      width: 30%;
+    }
+    &:focus {
+      border-color: $primary;
+    }
+  }
 }
