--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -49,9 +49,10 @@ a:visited {
   padding-left: 12px;
   border: 2px solid $primary;
   margin-bottom: 12px;
+   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 
   &:focus {
-    border: 2px solid $primary;
+    border-color: $primary;
   }
 }
 
