--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -4,18 +4,17 @@
 @use "../../styles/partials/global" as *;
 
 .about {
-  padding: 20px;
+  padding: 1.25rem;
   min-height: 100vh;
 
-
   @include tablet {
-    padding: 40px 40px;
+    padding: 2.5rem 2.5rem;
   }
   @include desktop {
-    padding: 40px 100px;
+    padding: 2.5rem 6.25rem;
   }
 
   &__text {
-    margin: 20px 0;
+    margin: 1.25rem 0;
   }
 }
