--- a/src/components/badges/badges.scss
+++ b/src/components/badges/badges.scss
@@ -5,8 +5,8 @@
 
 .badges {
   border: 3px solid $primary-medium;
-  padding: 12px;
-  margin: 20px 0;
+  padding: 0.75rem;
+  margin: 1.25rem 0;
   display: flex;
   flex-wrap: wrap;
   border-radius: 10px;
@@ -14,17 +14,16 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 
   &__badge {
-    height: 100px;
-    margin: 12px;
-
+    height: 6.25rem;
+    margin: 0.75rem;
   }
 
   &__header {
     background-color: $primary-medium;
-    margin: -12px -12px;
-    margin-bottom: 12px;
-    padding: 12px 12px 12px 12px;
-    font-size: 25px;
+    margin: -0.75rem -0.75rem;
+    margin-bottom: 0.75rem;
+    padding: 0.75rem 0.75rem 0.75rem 0.75rem;
+    font-size: 1.5625rem;
     width: 120%;
   }
 }
