--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -4,24 +4,21 @@
 @use "../../styles/partials/global" as *;
 
 .homepage {
-  padding: 20px;
+  padding: 1.25rem;
   min-height: 100vh;
 
   @include tablet {
-    padding: 40px 40px;
-  
+    padding: 2.5rem 2.5rem;
   }
   @include desktop {
-    padding: 40px 100px;
-    
+    padding: 2.5rem 6.25rem;
   }
 
-  
   &__text {
-    margin: 30px 0;
+    margin: 1.875rem 0;
   }
   &__list {
-    margin: 40px;
+    margin: 2.5rem;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -41,8 +38,8 @@
   }
 
   &__icon {
-    width: 50px;
-    margin-right: 12px;
+    width: 3.125rem;
+    margin-right: 0.75rem;
   }
 
   &__list-text {
@@ -51,7 +48,7 @@
 
   &__image {
     width: 100%;
-    border-radius: 10px;
-    margin-bottom: 20px;
+    border-radius: 0.625rem;
+    margin-bottom: 1.25rem;
   }
 }
