--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -13,23 +13,22 @@ ul {
 }
 
 h1 {
-  font-size: 30px;
-  margin-bottom: 12px;
+  font-size: 1.875rem;
+  margin-bottom: 0.75rem;
 }
 
 h2 {
-  margin-bottom: 12px;
-  line-height: 28px;
+  margin-bottom: 0.75rem;
+  line-height: 1.75rem;
 }
 
 h3 {
-  margin: 8px 0;
+  margin: 0.5rem 0;
 }
 
 p {
-  font-size: 18px;
-  line-height: 24px;
-
+  font-size: 1.125rem;
+  line-height: 1.5rem;
 }
 
 a {
@@ -44,12 +43,12 @@ a:visited {
 
 .form-input {
   width: 100%;
-  height: 32px;
-  border-radius: 10px;
-  padding-left: 12px;
+  height: 2rem;
+  border-radius: 0.625rem;
+  padding-left: 0.75rem;
   border: 2px solid $primary;
-  margin-bottom: 12px;
-   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin-bottom: 0.75rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 
   &:focus {
     border-color: $primary;
